Improve documentation on css width-ing

--- a/example.jquery.html
+++ b/example.jquery.html
@@ -41,7 +41,7 @@
       visibility: hidden;
     }
     .span2 {
-      width: 360px;
+      width: 80%;
     }
     
     footer {
@@ -1226,7 +1226,7 @@
         </select>
       </div>
       <div>
-        <em>Select with Width class</em>
+        <em>Select with 80% Width</em>
         <select data-placeholder="Your Favorite Type of Bear" tabindex="7" id ="manual_width">
           <option value=""></option>
           <option>American Black Bear</option>
