--- a/example.jquery.html
+++ b/example.jquery.html
@@ -1239,8 +1239,27 @@
           <option disabled>Spectacled Bear</option>
         </select>
       </div>
-
     </div>
+
+    <h2>Opening select boxes up</h2>
+    <div class="side-by-side clearfix">
+      <p>Occasionally you need to open a select box upwards, here's how to do it</p>
+      <code>$("#reverse_open").chosen({reverse_open:true})</code>
+ </p>
+      <div>
+        <em>Plain Select</em>
+        <select data-placeholder="Your Favorite Type of Bear" tabindex="7" style="width: 350px;" id="reverse_open">
+          <option value=""></option>
+          <option>American Black Bear</option>
+          <option>Asiatic Black Bear</option>
+          <option>Brown Bear</option>
+          <option>Giant Panda</option>
+          <option selected>Sloth Bear</option>
+          <option disabled>Sun Bear</option>
+          <option>Polar Bear</option>
+          <option disabled>Spectacled Bear</option>
+        </select>
+      </div>
 
 
     <h2>Default Text Support</h2>
@@ -1351,7 +1370,8 @@
   <script src="chosen/chosen.jquery.js" type="text/javascript"></script>
   <script type="text/javascript"> 
     $(".chzn-select").chosen(); $(".chzn-select-deselect").chosen({allow_single_deselect:true}); 
-    $("#manual_width").chosen({html_class:"span2",manual_width:true})
+    $("#manual_width").chosen({html_class:"span2",manual_width:true});
+    $("#reverse_open").chosen({reverse_open:true});
   </script>
   </form>
 </body>
