--- a/example.jquery.html
+++ b/example.jquery.html
@@ -1245,7 +1245,6 @@
     <div class="side-by-side clearfix">
       <p>Occasionally you need to open a select box upwards, here's how to do it</p>
       <code>$("#reverse_open").chosen({reverse_open:true})</code>
- </p>
       <div>
         <em>Plain Select</em>
         <select data-placeholder="Your Favorite Type of Bear" tabindex="7" style="width: 350px;" id="reverse_open">
@@ -1260,6 +1259,7 @@
           <option disabled>Spectacled Bear</option>
         </select>
       </div>
+    </div>
 
 
     <h2>Default Text Support</h2>
@@ -1367,7 +1367,7 @@
     
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js" type="text/javascript"></script>
-  <script src="chosen/chosen.jquery.js" type="text/javascript"></script>
+  <script src="chosen/jquery.chosen.js" type="text/javascript"></script>
   <script type="text/javascript"> 
     $(".chzn-select").chosen(); $(".chzn-select-deselect").chosen({allow_single_deselect:true}); 
     $("#manual_width").chosen({html_class:"span2",manual_width:true});
